--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,54 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
 }
 
+.category {
+  display: inline-block;
+  color: white;
+  font-size: .55rem;
+  text-transform: uppercase;
+  padding: 0.4rem 0.6rem;
+  border-radius: 15px;
+  margin-bottom: 0.5rem;
+}
+
+.category-sports {
+  background: var(--sports-color)
+}
+.category-ent {
+  background: var(--ent-color)
+}
+.category-tech {
+  background: var(--tech-color)
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  background: var(--dark-color);
+  color: #fff;
+  padding: .5rem 1.5rem;
+}
+
+.btn-light {
+  background: var(--light-color);
+}
+.btn-primary {
+  background: var(--primary-color);
+}
+.btn-secondary {
+  background: var(--secondary-color);
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
 /* Navigation */
 
 #main-nav {
@@ -101,3 +149,42 @@ h1, h2, h3, h4, h5, h6 {
   color: #777;
   margin-right: .5rem;
 }
+
+/* Showcase */
+
+#showcase {
+  color: #fff;
+  background: var(--dark-color);
+  padding: 2rem;
+  position: relative;
+}
+
+#showcase:before {
+  content: '';
+  background: url(../img/featured.jpg) no-repeat center center/cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.4;
+}
+
+#showcase .showcase-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* align horizontally */
+  justify-content: center;
+  /* align vertically */
+  align-items: center;
+  height: 50vh;
+}
+
+#showcase .showcase-content {
+  z-index: 1;
+}
+
+#showcase .showcase-content p {
+  margin-bottom: 1rem;
+}
+
