Adds content to article page

--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,10 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--primary-color) !important;
 }
 
+.l-heading {
+  font-size: 3rem;
+}
+
 /* Inner Page Grid Container */
 .page-container {
   display: grid;
@@ -178,7 +182,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page-container > *:first-child {
-  grid-row: 1 / span 2;
+  grid-row: 1 / span 3;
 }
 
 /* Navigation */
