--- a/css/mobile.css
+++ b/css/mobile.css
@@ -43,4 +43,21 @@
     border-bottom: #444 dotted 1px;
     padding-bottom: 1rem;
   }
+
+  .page-container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  
+  .page-container  *:first-child {
+    grid-row: 1;
+  }
+
+  .list {
+    padding-left: 2rem
+  }
+  
+  .l-heading {
+    font-size: 2rem;
+  }
 }
